@@ -12,7 +12,13 @@ Changed - indicates a change in using/behavior FreeRapid Downloader
 Fixed - indicates a bug fix
 Internal - indicates an internal change - information for FRD developers - nothing important for users
 
-FreeRapid Downloader 0.86
+FreeRapid Downloader 0.86 Update 1
+  Added : Support for Slovakian and Hungarian languages - thanks to all translators!
+  Changed : User preferences dialog opens faster
+  Fixed : Updated Quaqua look and feel, which fixes certain regressions in 0.86 on Mac OS X
+  Fixed : Unable to deselect "Use proxy list" - regression in 0.86
+
+30th October 2011 - FreeRapid Downloader 0.86
   Added : Support for Portuguese and Simplified Chinese languages - thanks to all translators!
   Added : Quiet Mode - don't let captcha dialogs bother you anymore while watching videos!
   Added : If the same file is downloaded from multiple sources, duplicates are automatically skipped
